--- a/YumFun/YumFun/Views/Cooking.storyboard
+++ b/YumFun/YumFun/Views/Cooking.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,13 +17,51 @@
                     <view key="view" contentMode="scaleToFill" id="ZfL-bN-IS6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pSD-Ms-gBd">
+                                <rect key="frame" x="159.5" y="581" width="95" height="30"/>
+                                <state key="normal" title="Start Cooking"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OLh-Ak-S9h">
+                                <rect key="frame" x="161" y="524" width="92" height="30"/>
+                                <state key="normal" title="Invite Friends"/>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ggd-SL-NJW">
+                                <rect key="frame" x="10" y="52" width="394" height="61"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uUm-QU-PDg">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="UxP-Lv-DqZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="5Kv-JC-cwN">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="gdj-Sp-fqj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="pSD-Ms-gBd" firstAttribute="top" secondItem="OLh-Ak-S9h" secondAttribute="bottom" constant="27" id="BEa-7J-Tie"/>
+                            <constraint firstItem="Ggd-SL-NJW" firstAttribute="leading" secondItem="gdj-Sp-fqj" secondAttribute="leading" constant="10" id="G2J-ob-7kn"/>
+                            <constraint firstItem="Ggd-SL-NJW" firstAttribute="top" secondItem="gdj-Sp-fqj" secondAttribute="top" constant="10" id="ORb-y0-Q5J"/>
+                            <constraint firstItem="OLh-Ak-S9h" firstAttribute="centerX" secondItem="ZfL-bN-IS6" secondAttribute="centerX" id="cdO-NE-NlE"/>
+                            <constraint firstItem="pSD-Ms-gBd" firstAttribute="centerX" secondItem="ZfL-bN-IS6" secondAttribute="centerX" id="tP1-rd-QAi"/>
+                            <constraint firstItem="gdj-Sp-fqj" firstAttribute="trailing" secondItem="Ggd-SL-NJW" secondAttribute="trailing" constant="10" id="ygw-wv-Pma"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q0o-Ki-0BL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="335" y="-13"/>
+            <point key="canvasLocation" x="334.78260869565219" y="-13.392857142857142"/>
         </scene>
     </scenes>
     <resources>
